--- a/src/app/shared/components/dialog/dialog-content/dialog-content.component.scss
+++ b/src/app/shared/components/dialog/dialog-content/dialog-content.component.scss
@@ -7,5 +7,5 @@
 .content-text {
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: pre;
+  white-space: nowrap;
 }
